syntax = "proto3";

option go_package = "AuctionSystem/grpc/proto";


message Bid {
    uint32 client_id = 1;
    uint32 amount = 2;
};

message Empty{}

message Outcome{
    uint32 winner_id = 1; //this is left blank if the auction is not over
    uint32 highest_bid = 2; 
};

message Ack{
    bool acknowledgement = 1;
}



service AuctionService{
    rpc bid (Bid) returns (Ack) {};
    rpc result (Empty) returns (Outcome) {};
};